--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="./home/lianxi.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a>
+                                <a href="./article/art_cate.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a>
+                                <a href="./article/art_list.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章列表</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a>
+                                <a href="./article/art_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i>发布文章</a>
                             </dd>
                         </dl>
                     </li>
@@ -90,7 +90,7 @@
 
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            © www.itheima.com - 黑马程序员
+            © www.xxxx.com - xxxxxxx
         </div>
     </div>
     <!-- 导入 layui 的JS文件 -->
